card list alignment has been fixed

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 }
 .individual-button{
   margin: 0 0.3rem;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 .social-icon{
   font-size: 1.2rem;
